crates/atlas-runtime/tests/corpus/fail/syntax_errors/unterminated_string.atlas
let x: string = "unterminated string;
